# tjan-speedrun-time

./: .env  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  docker-compose-dev.yml  docker-compose.yml  report.html  report.json
src/: env.rs  main.rs  repository.rs  twitch_repository.rs
src/errors/: environment_variables_error.rs  get_leaderboard_error.rs  lock_error.rs  mod.rs  place_query_error.rs
src/errors/twitch/: build_request_error.rs  get_title_error.rs  get_token_error.rs  get_user_id_error.rs  init_token_error.rs  mod.rs  refresh_token_error.rs  request_error.rs  response_parse_error.rs  response_to_string_error.rs  set_title_error.rs  set_token_error.rs  token_error.rs  validation_error.rs
src/middlewares/: api_key_service.rs
src/model/: get_channel_information_response.rs  get_users_response.rs  leader_board.rs  leaderboard_query.rs  leaderboard_request.rs  mod.rs  oauth_response.rs  run.rs  validate_request.rs
src/routes/: auth.rs  decrement_place.rs  index.rs  mod.rs  place.rs  time.rs  validate.rs
