[package]
name = "tjan_speedrun_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
hyper =  {version = "0.14", features=["http1", "client", "tcp"]}
hyper-tls = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"
env_logger = "0.10.0"
twitch_api2 = { version="0.6.1", features=["reqwest", "client", "helix"] }
reqwest = "0.11.14"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
