[package]
name = "tjan_speedrun_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["macros"], default-features = false }
hyper = { version = "0.14", default-features = false }
hyper-tls = { version = "0.5.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
base64 = { version = "0.21.0", default-features = false }
env_logger = { version = "0.10.0", default-features = false }
twitch_api2 = { version = "0.6.1", features = [
    "helix",
    "reqwest",
], default-features = false }
reqwest = { version = "0.11.14", features = [
    "default-tls",
], default-features = false }
tokio = { version = "1.26.0", default-features = false, features = ["sync"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
